<resources>
    <string name="app_name">eVolv App</string>
    <string name="evolve_test_application">eVolv Test Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_setting">Account Setting</string>
    <string name="sdk_version">SDK Version</string>
    <string name="account_setup">Account Setup</string>
    <string name="process_flow">Process Flow</string>
    <string name="about_us">About us</string>
    <string name="save_account_detail_error">Save account details first</string>
    <string name="please_enter_url">Save account details first</string>
    <string name="id_capture_save_msg">Save configuration</string>
    <string name="url">https://evolv.idmission.com/IDS/service/integ/idm/thirdparty/upsert</string>
    <string name="product_name">Identity_Validation_and_Face_Matching</string>
    <string name="re_capture">Recapture</string>
    <string name="id_validation">ID Validation</string>
    <string name="face_match">Face Match</string>
    <string name="id_validation_face_match">Process Image and Face Match</string>
    <string name="id_validation_video_match">Process Image and Video Match</string>
    <string name="id_details">ID Details</string>
    <string name="result">Result</string>
    <string name="process_image">Process Image Only</string>
    <string name="match_face">Match Face Only</string>
    <string name="process_image_and_match_face">Process Image and Match Face</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="customer_update">Customer Update</string>
    <string name="customer_Verification">Customer Verification</string>
    <string name="address_matching">Address Matching</string>
    <string name="address_capture">POA Capture</string>
    <string name="show_result_raw_data">Show All Raw Data</string>
    <string name="raw_data_request">Raw Data from Request</string>
    <string name="raw_data_response">Raw Data from Response</string>
    <string name="clear_data_back_main_page">Clear All Data and Back to Main Page</string>
    <string name="emp_verification">Employee Verification</string>
    <string name="emp_enrollment">Employee Enrollment(Face Match)</string>
    <string name="back">Back</string>
    <string name="generate_token">Generate Token</string>
    <string name="download">Download</string>
    <string name="create_emp_override">Create Employee(Override)</string>
    <string name="create_customer_override">Create Customer(Override)</string>
    <string name="verify_emp_override">Verify Employee(Override)</string>
    <string name="verify_customer_override">Verify Customer(Override)</string>
    <string name="id_validation_with_cus_enroll">ID Validation with customer enrollment</string>
    <string name="id_validation_with_emp_enroll">ID Validation with employee enrollment</string>
    <string name="id_face_with_emp_enroll">ID and Face with employee enrollment</string>
    <string name="id_face_with_video_enroll">ID and Face with video recording</string>
    <string name="customer_fp_enrollment_title">Customer enrollment with FP Biometrics</string>
    <string name="customer_fp_enrollment">Fingerprint Enrollment(Customer)</string>
    <string name="employee_fp_enrollment_title">Employee enrollment with FP Biometrics</string>
    <string name="employee_fp_enrollment">Fingerprint Enrollment(Employee)</string>
    <string name="employee_update">Employee Update</string>
    <string name="customize_product">Customize Product</string>
    <string name="capture">Capture</string>
    <string name="initiate">initiate</string>
    <string name="capture_embossed">Capture Embossed</string>
    <string name="test_url">Test URL</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="product_id">Product ID</string>
    <string name="product">Product Name</string>
    <string name="language">Language</string>
    <string name="save_account">Save Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="debaug_mode">Debug Mode</string>
    <string name="off">Off</string>
    <string name="on"> On</string>
    <string name="initialize">INITIALIZE</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_login_id">Enter Login Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_merchant_id">Enter Merchant ID</string>
    <string name="enter_product_id">Enter Product ID</string>
    <string name="enter_product_name">Entdr Product Name</string>
    <string name="camera_permission">Need to enable CAMERA permission.</string>
    <string name="captute">Capture</string>
    <string name="back_capture">&lt;  Back</string>
    <string name="next_capture">Next  &gt;</string>
    <string name="card_details">Card Details:</string>
    <string name="configuration">CONFIGURATION</string>
    <string name="id_outline_color">Id Outline Color</string>
    <string name="transparency">Transparency(1-100)</string>
    <string name="detected_id_outline_color">Detected Id Outline Color</string>
    <string name="color_outside_outline">Color Outside Outline</string>
    <string name="detected_color_outside_outline">Detected Color Outside Outline</string>
    <string name="light_threshold">Light Threshold</string>
    <string name="min_focus_threshold">Min.Focus Threshold</string>
    <string name="max_focus_threshold">Max.Focus Threshold</string>
    <string name="glare_percentage">Glare Percentage</string>
    <string name="enable_capture_button_time">Enable Capture Button Time(Second)</string>
    <string name="max_image_size">Max Image Size(kb)</string>
    <string name="image_height">Image Height</string>
    <string name="image_width">Image Width</string>
    <string name="header_text_label_size">Header Text Label Size</string>
    <string name="text_label_size">Text Label Size</string>
    <string name="text_font_type">Text Font Type</string>
    <string name="text_font_style">Text Font Style</string>
    <string name="header_text_font_type">Header Text Font Type</string>
    <string name="header_text_font_style">Header Text Font Style</string>
    <string name="text_label_color">Text Label Color</string>
    <string name="header_text_label_color">Header Text Label Color</string>
    <string name="back_button_color">Back Button Color</string>
    <string name="retry_button_color">Retry Button Color</string>
    <string name="retry_button_border_color">Retry Button Border Color</string>
    <string name="confirm_button_color">Confirm Button Color</string>
    <string name="confirm_button_style">Confirm Button Style</string>
    <string name="instruction_button_color">Instruction Button Color</string>
    <string name="instruction_button_text_color">Instruction Button Text Color</string>
    <string name="instruction_preview_background_color">Instruction Preview Background Color</string>
    <string name="id_capture_border">ID Capture Border</string>
    <string name="show_capture_label">Show Capture Label</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_capture_label">Enter Capture Label</string>
    <string name="default_orientation">Default Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="show_instruction_screen">Show Instruction Screen</string>
    <string name="detect_hand_type">Hand type</string>
    <string name="show_title_image">Show title Image</string>
    <string name="id_capture_title_alignment">Id capture title alignment</string>
    <string name="hide_id_capture_title">Hide Id capture title</string>
    <string name="id_capture_hint_message_alignment">Id capture hint message alignment</string>
    <string name="hide_id_hint_message">Hide Id hint message</string>
    <string name="id_capture_title_image_alignment">Id capture title image alignment</string>
    <string name="hide_id_title_image">Hide Id title image</string>
    <string name="id_capture_label">Id capture label</string>
    <string name="english_label">English Label</string>
    <string name="add_label">Add Label</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="capture_button_color">Capture Button Color</string>
    <string name="enable_shadow">Enable Shadow</string>
    <string name="mrz_retry_count">MRZ retry count</string>
    <string name="barcode_retry_count">BARCODE retry count</string>
    <string name="mrz_barcode_retry_count">MRZ and BARCODE retry count</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="extracted_data">Extracted Data:</string>
    <string name="default_font_type">DEFAULT</string>
    <string name="default_bold">DEFAULT_BOLD</string>
    <string name="san_serif">SANS_SERIF</string>
    <string name="serif">SERIF</string>
    <string name="monospace">MONOSPACE</string>
    <string name="normal">NORMAL</string>
    <string name="bold">BOLD</string>
    <string name="italic">ITALIC</string>
    <string name="bold_italic">BOLD_ITALIC</string>
    <string name="thin">Thin</string>
    <string name="thick">Thick</string>
    <string name="none">None</string>
    <string name="title_image_1">Title Image 1</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="all">All</string>
    <string name="zero">Zero</string>
    <string name="focus_threshold">Focus Threshold</string>
    <string name="glare_threshold">Glare Threshold</string>
    <string name="no_of_finger_to_check_focus">No. of Finger to check focus</string>
    <string name="index_finger_min">Index Finger(Min)</string>
    <string name="index_finger_max">Index Finger(Max)</string>
    <string name="middle_finger_Min">Middle Finger(Min)</string>
    <string name="middle_finger_Max">Middle Finger(Max)</string>
    <string name="ring_finger_min">Ring Finger(Min)</string>
    <string name="ring_finger_max">Ring Finger(Max)</string>
    <string name="baby_finger_min">Baby Finger(Min)</string>
    <string name="baby_finger_max">Baby Finger(Max)</string>
    <string name="save_image_width">Save Image Width</string>
    <string name="save_image_height">Save Image Height</string>
    <string name="aggresiveness_factor">Aggresiveness Factor</string>
    <string name="far_percentage">Far Percentage</string>
    <string name="too_far_percentage">Too Far Percentage</string>
    <string name="minimum_NFIQ_value">Minimum NFIQ Value</string>
    <string name="device_timeout">Device Timeout</string>
    <string name="image_size">Image Size(KB)</string>
    <string name="select_finger">Select Finger</string>
    <string name="clear">Clear</string>
    <string name="select_group">Select Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="select_field_name">Select Field Name</string>
    <string name="enter_field_name">Enter Field Name</string>
    <string name="enter_field_value">Enter Field Value</string>
    <string name="add">Add</string>
    <string name="product_config">Product Config</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="select_notification_type">Select Notification Type</string>
</resources>