<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_text_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_box_style"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_email_id" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_text_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_box_style"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_mobile_number" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/spinner_notification_type"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/select_notification_type" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/back_capture"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/next_capture"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>