<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Spinner
                    android:id="@+id/group_name_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="5dp"
                    android:textColor="@drawable/edit_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/select_group" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/other_group_name_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/other_group_name_edttxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_box_style"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/initialization_param_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_group_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Spinner
                    android:id="@+id/field_name_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="5dp"
                    android:textColor="@drawable/edit_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/select_field_name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/other_field_name_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/other_field_name_edttxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_box_style"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/initialization_param_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_field_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Spinner
                    android:id="@+id/field_value_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="5dp"
                    android:textColor="@drawable/edit_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_field_value" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/other_field_value_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/other_field_value_edttxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_box_style"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/initialization_param_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/enter_field_value" />
            </RelativeLayout>

            <Button
                android:id="@+id/add_product_definition_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_style"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/custom_product_config_spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/custom_product_config_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:popupBackground="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/background"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/product_config" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/back_capture"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/next_capture"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>