<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_capture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2.3"
            android:background="@drawable/view_pager_style"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/default_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/front_back" />

            <TextView
                android:id="@+id/text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#A0A0A0"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_capture"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_style"
                android:text="@string/capture_embossed"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_capture_vision"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_style"
                android:text="@string/capture"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/back_capture"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/next_capture"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/card_details"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textColor="@color/Black"
                    tools:ignore="HardcodedText"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_view_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="test"
                    android:textAllCaps="false"
                    android:textColor="@color/Black"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
